# rayonx

./: .gitignore  README.md  bom.xlsx  factory_settings.ini  features.ini  platformio.ini  readme.md  run.sh
backend/: platformio.ini
backend/include/: bricks_config.h
backend/src/: main.cpp
firmware/: package-lock.json  package.json  platformio.ini
firmware/include/: audio_handler.h  config.h  feedback.h  interface.h  log_handler.h  memory.h  mqtt_handler.h  rotary.h  selector_handler.h  senderlist.h  utils.h  volume_handler.h  wlan_handler.h  wlanconf.h  wlanconfig.h
firmware/src/: main.cpp
firmware/utils/: FindRadioURL.py  test_interface.html
hardware/: BillOfMaterials.csv  BillOfMaterials.json  InstructionsHardware.aux  InstructionsHardware.fdb_latexmk  InstructionsHardware.fls  InstructionsHardware.tex  README.md
hardware/configs/: presets.ambroise.config.json  presets.config.json  presets.general.config.json  presets.gm.config.json  presets.matt.config.json  presets.mutty.config.json  presets.papy.config.json  product.config.json
hardware/cutting/: FrontPanel.DXF  Selector1.DXF  Selector2.DXF
hardware/milling/: BoxBack.ngc  BoxFront.ngc
hardware/printing/: Indexer.STL  RotatySwitchCap.STL
instructions/: CMakeLists.txt  Instructions.aux  Instructions.tex  main.cpp
instructions/src/: classes.hpp  latexcpp.hpp
instructions/src/tex/: developercv.cls
interface/: .env  package-lock.json  package.json
scripts/: build_frontend.py
software/: ESPFlasherGUI.py  esp_flasher.py  esp_flasher_test.py  esp_flasher_test2.py  esptoolGUIUI.py
(+74 files in other folders)
