
########################
# PROJECT CONFIGURATION
########################
cmake_minimum_required(VERSION 3.10)
project(Instructions)
set(CMAKE_CXX_STANDARD 20)

########################
# ADD LIBS
########################


########################
# MAIN
########################
add_executable(main main.cpp)